--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 4000
 
-MONGO_URI=mongodb+srv://Suman:Suman@cluster0.vaxbsl3.mongodb.net/?retryWrites=true
+MONGO_URI=mongodb+srv://suman:Suman@cluster0.zmxlzra.mongodb.net/?retryWrites=true
 
 FRONTEND_URL=http://localhost:5173
 
